2013-11-05  Andrew MacLeod  <amacleod@redhat.com>

	* tree-outof-ssa.c (queue_phi_copy_p): Combine phi_ssa_name_p from 
	gimple.h and the rest of the condition in eliminate_build.
	(eliminate_build): Call new routine.
	* gimple.h (phi_ssa_name_p): Delete.

2013-11-05  Trevor Saunders  <tsaunders@mozilla.com>

	* vec.c (vec_prefix::calculate_allocation): Don't try to handle the
	case of no prefix and reserving zero slots, because when that's the
	case we'll never get here.
	* vec.h (va_heap::reserve): Don't try and handle
	vec_prefix::calculate_allocation returning zero because that should
	never happen.

2013-11-05  Richard Biener  <rguenther@suse.de>

	PR middle-end/58941
	* tree-dfa.c (get_ref_base_and_extent): Merge common code
	in MEM_REF and TARGET_MEM_REF handling.  Make sure to
	process trailing array detection before diving into the
	view-converted object (and possibly apply some extra offset).

2013-11-05  Joseph Myers  <joseph@codesourcery.com>

	* config/i386/i386.c (ix86_float_exceptions_rounding_supported_p):
	New function.
	(TARGET_FLOAT_EXCEPTIONS_ROUNDING_SUPPORTED_P): Define.

2013-11-05  Marc Glisse  <marc.glisse@inria.fr>

	PR tree-optimization/58958
	* tree-ssa-alias.c (ao_ref_init_from_ptr_and_size): Use
	get_addr_base_and_unit_offset instead of get_ref_base_and_extent.

2013-11-05  Marc Glisse  <marc.glisse@inria.fr>

	* tree-ssa-alias.h (ranges_overlap_p): Handle negative offsets.
	* tree-ssa-alias.c (ao_ref_init_from_ptr_and_size): Likewise.

2013-11-05  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/58984
	* ipa-prop.c (ipa_load_from_parm_agg_1): Add SIZE_P argument,
	set *SIZE_P if non-NULL on success.
	(ipa_load_from_parm_agg, ipa_analyze_indirect_call_uses): Adjust
	callers.
	(ipcp_transform_function): Likewise.  Punt if size of access
	is different from TYPE_SIZE on v->value's type.

2013-11-05  Tobias Burnus  <burnus@net-b.de>

	* doc/invoke.texi (-fopenmp-simd): Document new option.